6.44
    OS X
    * "make dist" will no longer bundle up resource fork files (._foo).

    Docs
    * The documentation of VERSION_FROM was recommending vstrings (1.2.3)
      which have never worked right.

    Tests
    * The compilation test was testing the installed modules, not the
      about-to-be-installed.

6.42  Fri Dec  7 17:00:14 PST 2007
    Bug Fixes
    - 6.33 moved PREREQ_FATAL to happen after CONFIGURE.  This meant if
      your CONFIGURE use a prereq it would fail and no PREREQ_FATAL
      message would be displayed.
    - Put the "nicetext" functionality back, VMS needs it to deal with
      other people's custom make.  But rename it to the more
      accurate maketext_filter(), test it and fix a bug where it would
      stop processing if it saw a macro declaration.

6.40  Thu Dec  6 03:00:47 PST 2007
    Bug Fixes
    - Remove the dubious nicetext() Makefile formatting hack to account for
      a lack of space between the target and colon needed on VMS.  This
      interfered with META.yml creation on VMS and possibly other output.
    - Fix the remaining targets which don't have a space between the target
      and the colon.

6.38  Wed Nov 28 16:01:12 PST 2007
    Releasing 6.37_03 as 6.38.

6.37_03  Mon Nov 26 14:15:34 PST 2007
    Tests
    - parse_version.t had wrong test count when version.pm isn't installed.
    - Fixed some warnings in the XS module we're using for testing.
    - "our $VERSION" test in parse_version.t was never running
    - Quoting uses of 1.2.3 style versions in parse_version.t to protect
      older perls.

    Portability
    - Moved the minimum required version up to 5.6.0.

6.37_02  Sun Nov 25 23:33:14 PST 2007
    Test Improvements
    - Added a test for a basic XS build.

    Bug Fixes
    - A refactoring in 6.37_01 broke XS compilation.

6.37_01  Sun Nov 25 17:05:53 PST 2007
    Improvements
    - Upgraded the META.yml to version 1.3 of the spec (which really
      doesn't change anything).  Thanks bdfoy.